# ebb

./: AGENTS.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: main.rs
src/llm/: call.rs  chat.rs  env.rs  mod.rs  model_list.rs  streaming.rs  types.rs
src/llm/anthorpic/: chat.rs  client.rs  mod.rs  streaming.rs
src/llm/gemini/: chat.rs  client.rs  mod.rs  streaming.rs
src/llm/openai/: chat.rs  client.rs  mod.rs  streaming.rs
src/service/: mod.rs  prompts.rs  refine.rs
tests/: test_install_release.sh
