[package]
name = "ebb"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros", "tracing"] }
actix-web = "4.13.0"
async-graphql = "7.2.1"
async-graphql-axum = "7.2.1"
tracing-subscriber = "0.3.23"
tower-http = { version = "0.6.11", features = ["cors"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net"] }
dotenv = "0.15.0"
log = "0.4.30"
jsonwebtoken = "10.4.0"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
sqlx = { version = "0.9.0", features = [
    "chrono",
    "json",
    "macros",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
mail-send = "0.6.0"
resend-rs = "0.25.1"
uuid = { version = "1.23.2", features = ["v7", "serde", "v8"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.150"
juniper = "0.17.1"
juniper_axum = "0.3.0"
juniper_graphql_ws = "0.5.0"
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures = "0.3.32"
rand = "0.8.5"
bytes = "1.10.1"
async-openai = { version = "0.41.0", features = ["chat-completion"] }
schemars = "0.8.22"
indexmap = "2.14.0"
once_cell = "1.21.4"
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.9"
zip = "2.4.2"
serde_yaml = "0.9.34"
mime_guess = "2.0.5"


[dev-dependencies]
wiremock = "0.6.5"
